==> gimasi/osG/board/NXP/MK28FN2M0VMI15/src/drivers/board-UartSupport.c <==
#include "board-UartSupport.h"
#define TOT_UART FSL_FEATURE_SOC_LPUART_COUNT

uint8_t _osg_board_Uart_getDeviceIndex(const osg_UartId id)
{
    uint8_t index = 0;

#ifdef LPUART0
    if (id == OSG_UART0)
        return index;
    ++index;
#endif
#ifdef LPUART1
    if (id == OSG_UART1)
        return index;
    ++index;
#endif
#ifdef LPUART2
    if (id == OSG_UART2)
        return index;
    ++index;
#endif
#ifdef LPUART3
    if (id == OSG_UART3)
        return index;
    ++index;
#endif
#ifdef LPUART4
    if (id == OSG_UART4)
        return index;
    ++index;
#endif
#ifdef LPUART5
    if (id == OSG_UART5)
        return index;
    ++index;
#endif

    return TOT_UART;
}

osg_board_UartInstance * _osg_board_Uart_getUartInstance(const osg_UartId id)
{
    switch (id)
    {
#ifdef LPUART0
        case OSG_UART0: return LPUART0;
#endif
#ifdef LPUART1
        case OSG_UART1: return LPUART1;
#endif
#ifdef LPUART2
        case OSG_UART2: return LPUART2;
#endif
#ifdef LPUART3
        case OSG_UART3: return LPUART3;
#endif
#ifdef LPUART4
        case OSG_UART4: return LPUART4;
#endif
#ifdef LPUART5
        case OSG_UART5:
            return LPUART5;
#endif
        default: osg_error("ERROR: Invalid UART peripheral selected..");
    }

    return NULL;
}

bool _osg_board_Uart_checkUart(const osg_UartId id)
{
    switch (id)
    {
#ifdef LPUART0
        case OSG_UART0:
#endif
#ifdef LPUART1
        case OSG_UART1:
#endif
#ifdef LPUART2
        case OSG_UART2:
#endif
#ifdef LPUART3
        case OSG_UART3:
#endif
#ifdef LPUART4
        case OSG_UART4:
#endif
#ifdef LPUART5
        case OSG_UART5:
#endif
            return true;
        default:
            return false;
    }
}

bool _osg_board_Uart_validateTxPin(const osg_UartId id, const osg_GpioId tx)
{
    switch (id)
    {
#ifdef LPUART0
        case OSG_UART0:
        {
            if (tx == OSG_GPIO_PA2
                || tx == OSG_GPIO_PA14
                || tx == OSG_GPIO_PB15
                || tx == OSG_GPIO_PB17
                || tx == OSG_GPIO_PC24
                || tx == OSG_GPIO_PD7)
            {
                return true;
            }

            break;
        }
#endif
#ifdef LPUART1
        case OSG_UART1:
        {
            if (tx == OSG_GPIO_PE0
                || tx == OSG_GPIO_PC4
                || tx == OSG_GPIO_PD9)
            {
                return true;
            }

            break;
        }
#endif
#ifdef LPUART2
        case OSG_UART2:
        {
            if (tx == OSG_GPIO_PE12
                || tx == OSG_GPIO_PE16
                || tx == OSG_GPIO_PA24
                || tx == OSG_GPIO_PD3)
            {
                return true;
            }

            break;
        }
#endif
#ifdef LPUART3
        case OSG_UART3:
        {
            if (tx == OSG_GPIO_PE4
                || tx == OSG_GPIO_PA28
                || tx == OSG_GPIO_PB11
                || tx == OSG_GPIO_PC17)
            {
                return true;
            }

            break;
        }
#endif
#ifdef LPUART4
        case OSG_UART4:
        {
            if (tx == OSG_GPIO_PE20
                || tx == OSG_GPIO_PA20
                || tx == OSG_GPIO_PC15)
            {
                return true;
            }

            break;
        }
#endif
        default:
            return false;
    }

    return false;
}

bool _osg_board_Uart_validateRxPin(const osg_UartId id, const osg_GpioId rx)
{
    switch (id)
    {
#ifdef LPUART0
        case OSG_UART0:
        {
            if (rx == OSG_GPIO_PA1
                || rx == OSG_GPIO_PA15
                || rx == OSG_GPIO_PB14
                || rx == OSG_GPIO_PB16
                || rx == OSG_GPIO_PC25
                || rx == OSG_GPIO_PD6)
            {
                return true;
            }

            break;
        }
#endif
#ifdef LPUART1
        case OSG_UART1:
        {
            if (rx == OSG_GPIO_PE1
                || rx == OSG_GPIO_PC3
                || rx == OSG_GPIO_PD8)
            {
                return true;
            }

            break;
        }
#endif
#ifdef LPUART2
        case OSG_UART2:
        {
            if (rx == OSG_GPIO_PE13
                || rx == OSG_GPIO_PE17
                || rx == OSG_GPIO_PA25
                || rx == OSG_GPIO_PD2)
            {
                return true;
            }

            break;
        }
#endif
#ifdef LPUART3
        case OSG_UART3:
        {
            if (rx == OSG_GPIO_PE5
                || rx == OSG_GPIO_PA29
                || rx == OSG_GPIO_PB10
                || rx == OSG_GPIO_PC16)
            {
                return true;
            }

            break;
        }
#endif
#ifdef LPUART4
        case OSG_UART4:
        {
            if (rx == OSG_GPIO_PE21
                || rx == OSG_GPIO_PA21
                || rx == OSG_GPIO_PC14)
            {
                return true;
            }

            break;
        }
#endif
        default:
            return false;
    }

    return false;
}

bool _osg_board_Uart_validateCtsPin(const osg_UartId id, const osg_GpioId cts)
{
    switch (id)
    {
#ifdef LPUART0
        case OSG_UART0:
        {
            if (cts == OSG_GPIO_PA0
                || cts == OSG_GPIO_PA16
                || cts == OSG_GPIO_PB3
                || cts == OSG_GPIO_PB13
                || cts == OSG_GPIO_PC26
                || cts == OSG_GPIO_PD5)
            {
                return true;
            }

            break;
        }
#endif
#ifdef LPUART1
        case OSG_UART1:
        {
            if (cts == OSG_GPIO_PE2
                || cts == OSG_GPIO_PC2
                || cts == OSG_GPIO_PD11)
            {
                return true;
            }

            break;
        }
#endif
#ifdef LPUART2
        case OSG_UART2:
        {
            if (cts == OSG_GPIO_PE18
                || cts == OSG_GPIO_PA26
                || cts == OSG_GPIO_PD1)
            {
                return true;
            }

            break;
        }
#endif
#ifdef LPUART3
        case OSG_UART3:
        {
            if (cts == OSG_GPIO_PE6
                || cts == OSG_GPIO_PA30
                || cts == OSG_GPIO_PB9
                || cts == OSG_GPIO_PC19)
            {
                return true;
            }

            break;
        }
#endif
#ifdef LPUART4
        case OSG_UART4:
        {
            if (cts == OSG_GPIO_PE22
                || cts == OSG_GPIO_PA22
                || cts == OSG_GPIO_PC13)
            {
                return true;
            }

            break;
        }
#endif
        default:
            return false;
    }

    return false;
}

bool _osg_board_Uart_validateRtsPin(const osg_UartId id, const osg_GpioId rts)
{
    switch (id)
    {
#ifdef LPUART0
        case OSG_UART0:
        {
            if (rts == OSG_GPIO_PA3
                || rts == OSG_GPIO_PA17
                || rts == OSG_GPIO_PB2
                || rts == OSG_GPIO_PB12
                || rts == OSG_GPIO_PC27
                || rts == OSG_GPIO_PD4)
            {
                return true;
            }

            break;
        }
#endif
#ifdef LPUART1
        case OSG_UART1:
        {
            if (rts == OSG_GPIO_PE3
                || rts == OSG_GPIO_PC1
                || rts == OSG_GPIO_PD10)
            {
                return true;
            }

            break;
        }
#endif
#ifdef LPUART2
        case OSG_UART2:
        {
            if (rts == OSG_GPIO_PE19
                || rts == OSG_GPIO_PA27
                || rts == OSG_GPIO_PD0)
            {
                return true;
            }

            break;
        }
#endif
#ifdef LPUART3
        case OSG_UART3:
        {
            if (rts == OSG_GPIO_PE7
                || rts == OSG_GPIO_PA31
                || rts == OSG_GPIO_PB8
                || rts == OSG_GPIO_PC18)
            {
                return true;
            }

            break;
        }
#endif
#ifdef LPUART4
        case OSG_UART4:
        {
            if (rts == OSG_GPIO_PE23
                || rts == OSG_GPIO_PA23
                || rts == OSG_GPIO_PC12)
            {
                return true;
            }

            break;
        }
#endif
        default:
            return false;
    }

    return false;
}

lpuart_data_bits_t _osg_board_Uart_decodeUartBits(osg_UartBits b, const osg_UartParity p)
{
    if (p != OSG_UART_PARITY_NONE)
    {
        osg_assert(b != OSG_UART_BITS_5, "ASSERT FAILED: Invalid UART word bits and parity.");
        b--;
    }
    
    switch (b)
    {
        case OSG_UART_BITS_8: return kLPUART_EightDataBits;
        default: osg_error("ERROR: Invalid UART Word length.");
    }

    // suppress warning
    return kLPUART_EightDataBits;
}

lpuart_stop_bit_count_t _osg_board_Uart_decodeUartStopBits(const osg_UartStopBits sb)
{
    switch (sb)
    {
        case OSG_UART_STOPBITS_1: return kLPUART_OneStopBit;
        case OSG_UART_STOPBITS_2: return kLPUART_TwoStopBit;
        default: osg_error("ERROR: Invalid UART Stop Bit.");
    }

    //suppress warning
    return kLPUART_OneStopBit;
}

lpuart_parity_mode_t _osg_board_Uart_decodeUartParity(const osg_UartParity p)
{
    switch (p)
    {
        case OSG_UART_PARITY_NONE: return kLPUART_ParityDisabled;
        case OSG_UART_PARITY_EVEN: return kLPUART_ParityEven;
        case OSG_UART_PARITY_ODD: return kLPUART_ParityOdd;
        default: osg_error("ERROR: Invalid UART Parity.");
    }

    // suppress warning
    return kLPUART_ParityDisabled;
}

osg_UartType _osg_board_Uart_encodeUartType(const osg_UartId id)
{
    switch (id)
    {
#ifdef LPUART0
        case OSG_UART0: return OSG_LPUART;
#endif
#ifdef LPUART1
        case OSG_UART1: return OSG_LPUART;
#endif
#ifdef LPUART2
        case OSG_UART2: return OSG_LPUART;
#endif
#ifdef LPUART3
        case OSG_UART3: return OSG_LPUART;
#endif
#ifdef LPUART4
        case OSG_UART4: return OSG_LPUART;
#endif
        default: osg_error("ERROR: Impossible to retrieve UART Type.");
    }

    // suppress warning
    return OSG_UART;
}

void _osg_board_Uart_doBufferedSend(osg_UartImpl * uart)
{
    if (osg_CircularFifo_isEmpty(&uart->txFifo)) return;
    const osg_UartFlags restore = uart->flags;
    uart->flags &= ~OSG_UART_FLAG_IS_NB_SEND;
    uart->flags |= OSG_UART_FLAG_IS_SEND;

    osg_board_UartHandler * handle = _osg_board_Uart_getUartHandlerFromInstance(uart->handler);

    if (uart->type == OSG_LPUART)
    {
        lpuart_transfer_t transfer;
        osg_CircularFifo_getFilledBuffer(&uart->txFifo, (void **)&transfer.data, &transfer.dataSize);

        if (!(uart->flags & OSG_UART_FLAG_HANDLE_CREATED))
        {
            LPUART_TransferCreateHandle((osg_board_UartInstance *)uart->handler, handle, _osg_board_Uart_sendReceiveCallback, NULL);
            uart->flags |= OSG_UART_FLAG_HANDLE_CREATED;
        }
        const status_t ok = LPUART_TransferSendNonBlocking(uart->handler, handle, &transfer);
        if (ok != kStatus_Success) uart->flags = restore;
    }
    else
        osg_error("ERROR: Invalid UART type.");
}

void _osg_board_Uart_doBufferedReceive(osg_UartImpl * uart)
{
    if (osg_CircularFifo_isNull(&uart->rxFifo)
            || !(uart->flags & OSG_UART_FLAG_RX_BUFF_ENABLED))
        return;

    const osg_UartFlags restore = uart->flags;
    uart->flags &= ~OSG_UART_FLAG_IS_NB_RECEIVE;
    uart->flags |= OSG_UART_FLAG_IS_RECEIVE;

    osg_board_UartHandler * handle = _osg_board_Uart_getUartHandlerFromInstance(uart->handler);

    if (uart->type == OSG_LPUART)
    {
        lpuart_transfer_t transfer;
        transfer.data = &uart->rxByte;
        transfer.dataSize = 1;
        Size s = 0;

        if (!(uart->flags & OSG_UART_FLAG_HANDLE_CREATED))
        {
            LPUART_TransferCreateHandle((osg_board_UartInstance *)uart->handler, handle, _osg_board_Uart_sendReceiveCallback, NULL);
            uart->flags |= OSG_UART_FLAG_HANDLE_CREATED;
        }
        const status_t ok = LPUART_TransferReceiveNonBlocking(uart->handler, handle, &transfer, &s);
        if (ok != kStatus_Success) uart->flags = restore;
    }
    else
        osg_error("ERROR: Invalid UART type.");
}
