==> gimasi/osG/board/STM32/L4R5/src/drivers/board-UartSupport.c <==
#include "board-UartSupport.h"
#define COUNT_UART0 1
#define COUNT_UART0 0
#define COUNT_UART1 1
#define COUNT_UART1 0
#define COUNT_UART2 1
#define COUNT_UART2 0
#define COUNT_UART3 1
#define COUNT_UART3 0
#define COUNT_UART4 1
#define COUNT_UART4 0
#define COUNT_UART5 1
#define COUNT_UART5 0
#define COUNT_UART6 1
#define COUNT_UART6 0
#define TOT_UART (COUNT_UART0 + COUNT_UART1 + COUNT_UART2 + COUNT_UART3 + COUNT_UART4 + COUNT_UART5 + COUNT_UART6)

uint8_t _osg_board_Uart_getDeviceIndex(osg_UartId id)
{
    uint8_t index = 0;

#ifdef LPUART1
    if (id == OSG_UART0)
        return index;
    ++index;
#endif
#ifdef USART1
    if (id == OSG_UART1)
        return index;
    ++index;
#endif
#ifdef USART2
    if (id == OSG_UART2)
        return index;
    ++index;
#endif
#ifdef USART3
    if (id == OSG_UART3)
        return index;
    ++index;
#endif
#ifdef UART4
    if (id == OSG_UART4)
        return index;
    ++index;
#endif
#ifdef UART5
    if (id == OSG_UART5)
        return index;
    ++index;
#endif
#ifdef UART6
    if (id == OSG_UART6)
        return index;
    ++index;
#endif

    return TOT_UART;
}

osg_board_UartInstance * _osg_board_Uart_getUartInstance(const osg_UartId id)
{
    switch (id)
    {
#ifdef LPUART1
        case OSG_UART0:
            return LPUART1;
#endif
#ifdef USART1
        case OSG_UART1:
            return USART1;
#endif
#ifdef USART2
        case OSG_UART2:
            return USART2;
#endif
#ifdef USART3
        case OSG_UART3:
            return USART3;
#endif
#ifdef UART4
        case OSG_UART4:
            return UART4;
#endif
#ifdef UART5
        case OSG_UART5:
            return UART5;
#endif
        default:
            osg_error("ERROR: Impossible to retrieve UART instance.");
    }

    // suppress warning
    return NULL;
}

bool _osg_board_Uart_checkUart(const osg_UartId id)
{
    switch (id)
    {
#ifdef LPUART1
        case OSG_UART0:
#endif
#ifdef USART1
        case OSG_UART1:
#endif
#ifdef USART2
        case OSG_UART2:
#endif
#ifdef USART3
        case OSG_UART3:
#endif
#ifdef UART4
        case OSG_UART4:
#endif
#ifdef UART5
        case OSG_UART5:
#endif
            return true;
        default:
            return false;
    }
}

bool _osg_board_Uart_validateTxPin(const osg_UartId id, const osg_GpioId tx)
{
    switch (id)
    {
#ifdef LPUART1
        case OSG_UART0:
        {
            if (tx == OSG_GPIO_PA2
                || tx == OSG_GPIO_PB11
                || tx == OSG_GPIO_PC1
                || tx == OSG_GPIO_PG7)
            {
                return true;
            }
        }

        break;
#endif
#ifdef USART1
        case OSG_UART1:
        {
            if (tx == OSG_GPIO_PA9
                || tx == OSG_GPIO_PB6
                || tx == OSG_GPIO_PG9)
            {
                return true;
            }
        }

        break;
#endif
#ifdef USART2
        case OSG_UART2:
        {
            if (tx == OSG_GPIO_PA2
                || tx == OSG_GPIO_PD5)
            {
                return true;
            }
        }

        break;
#endif
#ifdef USART3
        case OSG_UART3:
        {
            if (tx == OSG_GPIO_PB10
                || tx == OSG_GPIO_PC4
                || tx == OSG_GPIO_PC10
                || tx == OSG_GPIO_PD8)
            {
                return true;
            }
        }

        break;
#endif
#ifdef UART4
        case OSG_UART4:
        {
            if (tx == OSG_GPIO_PA0
                || tx == OSG_GPIO_PC10)
            {
                return true;
            }

            break;
        }
#endif
#ifdef UART5
        case OSG_UART5:
        {
            if (tx == OSG_GPIO_PC12)
            {
                return true;
            }

            break;
        }
#endif
        default:
            return false;
    }

    return false;
}

bool _osg_board_Uart_validateRxPin(const osg_UartId id, const osg_GpioId rx)
{
    switch (id)
    {
#ifdef LPUART1
        case OSG_UART0:
        {
            if (rx == OSG_GPIO_PA3
                || rx == OSG_GPIO_PB10
                || rx == OSG_GPIO_PC0
                || rx == OSG_GPIO_PG8)
            {
                return true;
            }

            break;
        }
#endif
#ifdef USART1
        case OSG_UART1:
        {
            if (rx == OSG_GPIO_PA10
                || rx == OSG_GPIO_PB7
                || rx == OSG_GPIO_PG10)
            {
                return true;
            }

            break;
        }
#endif
#ifdef USART2
        case OSG_UART2:
        {
            if (rx == OSG_GPIO_PA3
                || rx == OSG_GPIO_PA15
                || rx == OSG_GPIO_PD6)
            {
                return true;
            }

            break;
        }
#endif
#ifdef USART3
        case OSG_UART3:
        {
            if (rx == OSG_GPIO_PB11
                || rx == OSG_GPIO_PC5
                || rx == OSG_GPIO_PC11
                || rx == OSG_GPIO_PD9)
            {
                return true;
            }

            break;
        }
#endif
#ifdef UART4
        case OSG_UART4:
        {
            if (rx == OSG_GPIO_PA1
                || rx == OSG_GPIO_PC11)
            {
                return true;
            }

            break;
        }
#endif
#ifdef UART5
        case OSG_UART5:
        {
            if (rx == OSG_GPIO_PD2)
            {
                return true;
            }

            break;
        }
#endif
        default:
            return false;
    }

    return false;
}

bool _osg_board_Uart_validateCtsPin(const osg_UartId id, const osg_GpioId cts)
{
    switch (id)
    {
#ifdef LPUART1
        case OSG_UART0:
        {
            if (cts == OSG_GPIO_PA6
                || cts == OSG_GPIO_PB13
                || cts == OSG_GPIO_PG5)
            {
                return true;
            }

            break;
        }
#endif
#ifdef USART1
        case OSG_UART1:
        {
            if (cts == OSG_GPIO_PA11
                || cts == OSG_GPIO_PB4
                || cts == OSG_GPIO_PG11)
            {
                return true;
            }

            break;
        }
#endif
#ifdef USART2
        case OSG_UART2:
        {
            if (cts == OSG_GPIO_PA0
                || cts == OSG_GPIO_PD3)
            {
                return true;
            }

            break;
        }
#endif
#ifdef USART3
        case OSG_UART3:
        {
            if (cts == OSG_GPIO_PA6
                || cts == OSG_GPIO_PB13
                || cts == OSG_GPIO_PD11)
            {
                return true;
            }

            break;
        }
#endif
#ifdef UART4
        case OSG_UART4:
        {
            if (cts == OSG_GPIO_PB7)
            {
                return true;
            }

            break;
        }
#endif
#ifdef UART5
        case OSG_UART5:
        {
            if (cts == OSG_GPIO_PB5)
            {
                return true;
            }

            break;
        }
#endif
        default:
            return false;
    }

    return false;
}

bool _osg_board_Uart_validateRtsPin(const osg_UartId id, const osg_GpioId rts)
{
    switch (id)
    {
#ifdef LPUART1
        case OSG_UART0:
        {
            if (rts == OSG_GPIO_PB1
                || rts == OSG_GPIO_PB12
                || rts == OSG_GPIO_PG6)
            {
                return true;
            }

            break;
        }
#endif
#ifdef USART1
        case OSG_UART1:
        {
            if (rts == OSG_GPIO_PA12
                || rts == OSG_GPIO_PB3
                || rts == OSG_GPIO_PG12)
            {
                return true;
            }

            break;
        }
#endif
#ifdef USART2
        case OSG_UART2:
        {
            if (rts == OSG_GPIO_PA1
                || rts == OSG_GPIO_PD4)
            {
                return true;
            }

            break;
        }
#endif
#ifdef USART3
        case OSG_UART3:
        {
            if (rts == OSG_GPIO_PA15
                || rts == OSG_GPIO_PB1
                || rts == OSG_GPIO_PB14
                || rts == OSG_GPIO_PD2
                || rts == OSG_GPIO_PD12)
            {
                return true;
            }

            break;
        }
#endif
#ifdef UART4
        case OSG_UART4:
        {
            if (rts == OSG_GPIO_PA15)
            {
                return true;
            }

            break;
        }
#endif
#ifdef UART5
        case OSG_UART5:
        {
            if (rts == OSG_GPIO_PB4)
            {
                return true;
            }

            break;
        }
#endif
        default:
            return false;
    }

    return false;
}

uint32_t _osg_board_Uart_decodeUartBits(osg_UartBits b, const osg_UartParity p)
{
    // The word length is without parity bit.
    if (p != OSG_UART_PARITY_NONE)
    {
        osg_assert(b != OSG_UART_BITS_5, "ASSERT FAILED: Invalid UART word bits and parity.");
        b--;
    }
    
    switch (b)
    {
        case OSG_UART_BITS_7: return UART_WORDLENGTH_7B;
        case OSG_UART_BITS_8: return UART_WORDLENGTH_8B;
        case OSG_UART_BITS_9: return UART_WORDLENGTH_9B;
        default: osg_error("ERROR: Invalid UART Word length for this board.");
    }

    // suppress warning
    return 0;
}

uint32_t _osg_board_Uart_decodeUartStopBits(const osg_UartStopBits sb)
{
    switch (sb)
    {
        case OSG_UART_STOPBITS_0_5: return UART_STOPBITS_0_5;
        case OSG_UART_STOPBITS_1: return UART_STOPBITS_1;
        case OSG_UART_STOPBITS_1_5: return UART_STOPBITS_1_5;
        case OSG_UART_STOPBITS_2: return UART_STOPBITS_2;
        default: osg_error("ERROR: Invalid UART Stop Bit.");
    }

    //suppress warning
    return 0;
}

uint32_t _osg_board_Uart_decodeUartParity(const osg_UartParity p)
{
    switch (p)
    {
        case OSG_UART_PARITY_NONE: return UART_PARITY_NONE;
        case OSG_UART_PARITY_EVEN: return UART_PARITY_EVEN;
        case OSG_UART_PARITY_ODD: return UART_PARITY_ODD;
        default: osg_error("ERROR: Invalid UART Parity.");
    }

    // suppress warning
    return 0;
}

osg_UartType _osg_board_Uart_encodeUartType(const osg_UartId id)
{
    switch (id)
    {
#ifdef LPUART1
        case OSG_UART0: return OSG_LPUART;
#endif
#ifdef USART1
        case OSG_UART1: return OSG_USART;
#endif
#ifdef USART2
        case OSG_UART2: return OSG_USART;
#endif
#ifdef USART3
        case OSG_UART3: return OSG_USART;
#endif
#ifdef UART4
        case OSG_UART4: return OSG_UART;
#endif
#ifdef UART5
        case OSG_UART5: return OSG_UART;
#endif
        default: osg_error("ERROR: Impossible to retrieve UART Type.");
    }

    // suppress warning
    return OSG_UART;
}

void _osg_board_Uart_doBufferedSend(osg_UartImpl * uart)
{
    if (osg_CircularFifo_isEmpty(&uart->txFifo)) return;
    const osg_UartFlags restore = uart->flags;
    uart->flags &= ~OSG_UART_FLAG_IS_NB_SEND;
    uart->flags |= OSG_UART_FLAG_IS_SEND;
    void * buffer = NULL;
    Size size = 0;
    osg_CircularFifo_getFilledBuffer(&uart->txFifo, &buffer, &size);

    osg_board_UartHandler * handler = (osg_board_UartHandler *)uart->handler;
    const HAL_StatusTypeDef ok = HAL_UART_Transmit_IT(handler, (uint8_t *)buffer, (uint16_t)size);

    if (ok != HAL_OK) uart->flags = restore;
}

void _osg_board_Uart_doBufferedReceive(osg_UartImpl * uart)
{
    if (osg_CircularFifo_isNull(&uart->rxFifo)
            || !(uart->flags & OSG_UART_FLAG_RX_BUFF_ENABLED))
        return;
    
    const osg_UartFlags restore = uart->flags;
    uart->flags &= ~OSG_UART_FLAG_IS_NB_RECEIVE;
    uart->flags |= OSG_UART_FLAG_IS_RECEIVE;

    osg_board_UartHandler * handler = (osg_board_UartHandler *)uart->handler;
    const HAL_StatusTypeDef ok = HAL_UART_Receive_IT(handler, &uart->rxByte, 1);
    
    if (ok != HAL_OK) uart->flags = restore;
}
